syntax = "proto3";

package ares.messaging;

import "google/protobuf/any.proto";

message DeviceCommandResult {
	google.protobuf.Any result = 1; // Result of the command performed
	bool success = 2; // Whether or not the execution was successful
	string error = 3; // Error message assuming the success is false
}